--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,14 @@
     color: inherit;
     text-decoration: none;
   }
+
+  blockquote {
+    margin: 0;
+  }
+
+  ul {
+    margin-block: 0;
+  }
 }
 
 @layer typography {
@@ -96,6 +104,12 @@
 
   h3 {
     font-size: var(--font-size-h3);
+    line-height: var(--line-height-heading);
+  }
+
+  blockquote {
+    font-size: var(--font-size-h3);
+    font-weight: var(--font-weight-bold);
     line-height: var(--line-height-heading);
   }
 
