--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
-@media not (prefers-reduced-motion) {
-  @view-transition {
-    navigation: auto;
+@layer animation {
+  @media not (prefers-reduced-motion) {
+    @view-transition {
+      navigation: auto;
+    }
   }
 }
 
@@ -27,25 +29,35 @@
     --line-height-heading: 1.25;
     --line-height-body: 1.5;
     --line-height-small: 1.25;
-
-    --grid-inline-size: min(1024px, 100%);
-    --grid-template-columns: repeat(6, 1fr);
-    --grid-gap-column: 32px;
-    --grid-gap-row: 120px;
-    --grid-gap-row-article: 80px;
-    --grid-gap-row-text: 24px;
-    --grid-gap: var(--grid-gap-row) var(--grid-gap-column);
   }
 }
 
 @layer reset {
   body {
-    background-color: var(--color-background-website);
     margin: 0;
   }
 
-  :is(h1, h2, h3, h4, h5, h6, p) {
+  :is(h1, h2, h3, h4, h5, h6) {
+    font-size: inherit;
+    font-weight: inherit;
     margin-block: 0;
+  }
+
+  p {
+    margin-block: 0;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  blockquote {
+    margin: 0;
+  }
+
+  figure {
+    margin: 0;
   }
 
   img {
@@ -59,23 +71,6 @@
     display: block;
     fill: currentColor;
     fill-rule: evenodd;
-  }
-
-  figure {
-    margin: 0;
-  }
-
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  blockquote {
-    margin: 0;
-  }
-
-  ul {
-    margin-block: 0;
   }
 }
 
@@ -132,77 +127,132 @@
   }
 }
 
-@layer layout {
-  @layer grid {
-    .grid {
-      display: grid;
-      gap: var(--grid-gap);
-      grid-template-columns: var(--grid-template-columns);
-      inline-size: var(--grid-inline-size);
-      margin-inline: auto;
+@layer grid {
+  .grid {
+    display: grid;
+    grid-template-columns: 0px 1fr 0px;
+    margin-inline: auto;
+    max-inline-size: 1024px;
+    padding-block: 24px 48px;
+    gap: 48px 24px;
+
+    @media (400px <= width) {
+      padding-block: 32px 64px;
+      gap: 64px 32px;
+    }
+
+    @media (768px <= width) {
+      grid-template-columns: repeat(6, 1fr);
       padding: 80px 80px 160px 80px;
+      gap: 120px 40px;
     }
+  }
 
-    :is(.article, .footer, .header, .section) {
-      align-items: start;
-      display: grid;
+  :is(.article, .section, .footer) {
+    display: grid;
+    grid-column: 1 / -1;
+    grid-template-columns: subgrid;
+  }
+
+  .nav {
+    align-items: center;
+    display: flex;
+    grid-column: 2 / -2;
+    justify-content: space-between;
+
+    @media (768px <= width) {
       grid-column: 1 / -1;
-      grid-template-columns: subgrid;
+    }
+  }
+
+  .article {
+    row-gap: 24px;
+
+    @media (400px <= width) {
+      row-gap: 32px;
     }
 
-    .nav {
-      align-items: center;
-      display: flex;
-      grid-column: 1 / -1;
-      justify-content: space-between;
-      view-transition-name: nav;
+    @media (768px <= width) {
+      row-gap: 80px;
+    }
+  }
+
+  .section {
+    row-gap: 24px;
+
+    @media (400px <= width) {
+      row-gap: 32px;
     }
 
-    .article {
-      row-gap: var(--grid-gap-row-article);
+    @media (768px <= width) {
+      row-gap: 60px;
     }
 
-    .section {
-      gap: 48px;
+    &:is(.highlight) {
+      background-color: var(--color-background-highlight);
+      padding-block: 24px;
 
-      &.highlight {
-        background-color: var(--color-background-highlight);
-        border-radius: 6px;
+      @media (400px <= width) {
+        padding-block: 32px;
+      }
+
+      @media (768px <= width) {
         padding-block: 80px;
       }
-      &.gallery {
-        row-gap: var(--grid-gap-column);
-      }
+    }
+  }
+
+  .gallery {
+    display: grid;
+    grid-column: 1 / -1;
+    grid-template-columns: subgrid;
+    gap: 24px;
+
+    @media (400px <= width) {
+      gap: 32px;
     }
 
-    .text {
-      align-items: start;
-      display: flex;
-      flex-direction: column;
-      grid-column: 2 / -2;
-      row-gap: var(--grid-gap-row-text);
+    @media (768px <= width) {
+      row-gap: 40px;
+    }
+  }
 
-      &:is(.center) {
-        align-items: center;
-        text-align: center;
+  .text {
+    align-items: start;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    grid-column: 2 / -2;
+
+    @media (400px <= width) {
+      gap: 16px;
+    }
+
+    @media (768px <= width) {
+      gap: 24px;
+    }
+
+    &:is(.center) {
+      align-items: center;
+      text-align: center;
+    }
+  }
+
+  .figure {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    grid-column: span 3;
+
+    &:only-child {
+      @media (768px <= width) {
+        grid-column: span 6;
       }
     }
   }
 }
 
 @layer components {
-  @layer figure {
-    .figure {
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-      grid-column: span 6;
-
-      &:not(:only-child) {
-        grid-column: span 3;
-      }
-    }
-  }
   @layer button {
     .button {
       border-radius: 5px;
@@ -243,10 +293,10 @@
   }
   @layer project {
     .project {
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
+      display: grid;
+      grid-template-columns: subgrid;
       grid-column: span 3;
+      row-gap: 16px;
       text-decoration: none;
       transition: opacity 300ms ease;
 
@@ -259,6 +309,18 @@
       }
     }
 
+    .project-image {
+      grid-column: 1 / -1;
+    }
+
+    .project-details {
+      grid-column: 2 / -2;
+
+      @media (768px <= width) {
+        grid-column: 1 / -1;
+      }
+    }
+
     .project-title {
       font-weight: var(--font-weight-bold);
     }
@@ -266,23 +328,6 @@
     .project-description {
       color: var(--color-text-secondary);
       font-size: var(--font-size-small);
-    }
-  }
-  @layer meta {
-    .meta {
-      color: var(--color-text-secondary);
-      display: flex;
-      font-size: var(--font-size-small);
-      gap: 16px;
-      line-height: var(--line-height-small);
-      list-style: none;
-      margin-block: 0;
-      padding-inline-start: 0;
-    }
-    .meta-item {
-      align-items: center;
-      display: flex;
-      gap: 4px;
     }
   }
 }
