--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@
     --color-text-secondary: #575653;
     --color-background-website: #fff;
     --color-background-highlight: #f7f7f6;
-    --color-background-hover: #eee;
+    --color-border: #e6e6e5;
+    --color-shadow: rgba(0, 0, 0, 0.04);
 
     --font-family-body: "Lato", sans-serif;
 
@@ -33,6 +34,17 @@
     --grid-column-full-width: 1 / -1;
     --grid-column-text-width: 2 / -2;
     --grid-column-half-width: span 3;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --color-text-primary: #fff;
+      --color-text-secondary: #ababa9;
+      --color-background-website: #2d2c28;
+      --color-background-highlight: #31302c;
+      --color-border: #464542;
+      --color-shadow: rgba(0, 0, 0, 0.04);
+    }
   }
 }
 
@@ -80,6 +92,7 @@
 
 @layer typography {
   body {
+    background-color: var(--color-background-website);
     color: var(--color-text-primary);
     font-family: var(--font-family-body);
     font-size: var(--font-size-body);
@@ -233,8 +246,8 @@
       transition-timing-function: ease;
 
       &:is(:hover, [aria-current]) {
-        box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.12),
-          0 2px 4px rgba(0, 0, 0, 0.04);
+        box-shadow: inset 0 0 0 1px var(--color-border),
+          0 2px 4px var(--color-shadow);
         color: var(--color-text-primary);
       }
     }
