--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     --color-background-website: light-dark(#fff, #2d2c28);
     --color-background-highlight: light-dark(#f7f7f6, #31302c);
     --color-border: light-dark(#e6e6e5, #464542);
-    --color-shadow: light-dark(rgba(0, 0, 0, 0.04));
+    --color-shadow: rgba(0, 0, 0, 0.04);
 
     --font-family-body: "Lato", sans-serif;
     --font-family-code: monospace;
@@ -258,6 +258,9 @@
       &:is(:hover, [aria-current]) {
         box-shadow: inset 0 0 0 1px var(--color-border),
           0 2px 4px var(--color-shadow);
+      }
+      &:is([aria-current]) {
+        background-color: var(--color-background-highlight);
         color: var(--color-text-primary);
       }
     }
