--- a/styles.css
+++ b/styles.css
@@ -363,3 +363,20 @@
     }
   }
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  @layer animation {
+    @keyframes scale-fade-in {
+      from {
+        transform: scale(0.75);
+      }
+    }
+
+    .figure,
+    .project {
+      animation: scale-fade-in ease-out both;
+      animation-timeline: view();
+      animation-range: 0 33.333333%;
+    }
+  }
+}
