--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@
     --font-size-h2: clamp(20px, 3.125vw, 32px);
     --font-size-h3: clamp(18px, 2.34375vw, 24px);
     --font-size-body: 18px;
-    --font-size-code: 16px;
     --font-size-small: 14px;
 
     --font-weight-xbold: 900;
@@ -131,14 +130,19 @@
     text-align: center;
   }
 
+  code,
   kbd {
     background-color: var(--color-background-highlight);
     border: thin solid var(--color-border);
     border-radius: 4px;
-    box-shadow: 0 2px 4px var(--color-shadow);
     font-family: var(--font-family-code);
-    font-size: var(--font-size-code);
-    padding-inline: 4px;
+    font-size: var(--font-size-small);
+    padding: 2px 4px;
+  }
+
+  kbd {
+    box-shadow: inset 0 1px 0 var(--color-background-website),
+      0 1px 2px var(--color-shadow);
   }
 
   .link {
