update background highlight colour

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     --color-text-primary: light-dark(#2d2c28, #fff);
     --color-text-secondary: light-dark(#575653, #ababa9);
     --color-background-website: light-dark(#fff, #2d2c28);
-    --color-background-highlight: light-dark(#f7f7f6, #353431);
+    --color-background-highlight: light-dark(#f5f7fa, #353431);
     --color-border: light-dark(#e6e6e5, #464542);
     --color-shadow: rgba(0, 0, 0, 0.04);
 
